<resources>
    <string name="app_name">WorkoutTracker</string>

    <!--FragmentNavigation-->
    <string name="back_button_press">Press again the back button for exit</string>

    <!--Login-->
    <string name="enter_email">Enter email…</string>
    <string name="enter_password">Enter password…</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!--DatabaseHelper-->
    <string name="user_already_exists">User already exists</string>

    <!--Sign up-->
    <string name="enter_username">Enter username…</string>
    <string name="confirm_password">Confirm password…</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="sign_up_successful">You have signed up successfully</string>

    <!--Workout history-->
    <string name="log_out">Log out</string>
    <string name="add">Add</string>
    <string name="logout_success">Logout successfully</string>

    <!--Add new workout-->
    <string name="add_new_workout">Add new workout</string>
    <string name="enter_workout_name">Enter workout name…</string>
    <string name="enter_burned_calories">Enter burned calories…</string>
    <string name="enter_duration_of_workout">Enter duration of workout…</string>
    <string name="choose_date">Choose date</string>
    <string name="data_added_successfully">Workout added successfully</string>
    <string name="data_adding_fail">Failed to add workout</string>
    <string name="empty" />
    <string name="upload_photo_or_take">Upload or take photo</string>
    <string name="image_upload_successfully">Image chose successfully</string>
    <string name="details">Workout details</string>
    <string name="workout_image">workout image</string>

    <!--Details-->
    <string name="workout_name">Workout name</string>
    <string name="burned_calories">Burned calories</string>
    <string name="duration">Duration</string>
    <string name="date_of_workout">Date of workout</string>
    <string name="add_date">Add date</string>

    <!--Error messages-->
    <string name="check_email_and_password">Check your email and password</string>
    <string name="login_successful">Login successful</string>
    <string name="fail">Fail</string>
    <string name="login_fail">Login failed. Check your email and password.</string>
    <string name="fail_image_choose">Failed image choose</string>
    <string name="check_terms">You have to accept Terms and Conditions</string>
    <string name="passwords_dont_match">Inserted passwords do not match</string>
    <string name="password_length">Your password has to contain at least 6 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_length">Your username has to contain at least 4 characters</string>
    <string name="username_fail">Your username should contain only alphabetical and numeric characters</string>
    <string name="no_added_workout">No added workout</string>


</resources>