<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:fontFamily="casual"
        android:text="@string/add_new_workout"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp50"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/add_new_workout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/add_workout_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:background="@drawable/my_rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_workout_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/dp30"
            android:paddingTop="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:textAlignment="center"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/add_workout_calories_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:background="@drawable/my_rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_burned_calories"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/dp30"
            android:paddingTop="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:textAlignment="center"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/add_workout_duration_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:background="@drawable/my_rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_duration_of_workout"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="@dimen/dp30"
            android:paddingTop="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:textAlignment="center"
            android:textColor="@color/colorText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <TextView
                    android:id="@+id/add_workout_date_of_workout_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_rounded_edittext"
                    android:padding="@dimen/dp10"
                    android:paddingStart="@dimen/dp10"
                    android:paddingEnd="@dimen/dp10"
                    android:text="@string/choose_date"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/add_workout_choose_date_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40"
                    android:background="@color/material_on_surface_stroke"
                    android:src="@drawable/calendar"
                    app:tint="?colorPrimaryVariant"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/choose_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <TextView
                    android:id="@+id/add_workout_upload_photo_imageButton_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_rounded_edittext"
                    android:padding="@dimen/dp10"
                    android:paddingStart="@dimen/dp10"
                    android:paddingEnd="@dimen/dp10"
                    android:text="@string/upload_photo_or_take"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:visibility="gone"
                    android:contentDescription="@string/empty"
                    android:src="@android:color/holo_red_dark"
                    android:id="@+id/uploaded_image_imageView"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/add_workout_upload_photo_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40"
                    android:background="@color/material_on_surface_stroke"
                    android:src="@drawable/upload"
                    app:tint="?colorPrimaryVariant"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/choose_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/add_workout_take_photo_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40"
                    android:background="@color/material_on_surface_stroke"
                    android:src="@drawable/camera"
                    app:tint="?colorPrimaryVariant"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/choose_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/add_new_workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp40"
        android:background="@drawable/my_rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/add"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>